--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 </head>
 <body>
-	<h1><a href="./Antra Pamoka.html"> Pirmas darbas </h1></a>
-	<h1><a href=""> Antras darbas</h1></a>
+	<h1><a href="Pirmas./Pirma Pamoka.html"> Pirmas darbas </h1></a>
+	<h1><a href="Antras./Antra Pamoka.html"> Antras darbas</h1></a>
 	<h1><a href=""> trecias darbas</h1></a>
 </body>
 </html>
