--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
 	<h1><a target="_blank" href="Pirmas./Pirma Pamoka.html"> Pirmas darbas </h1></a>
 	<h1><a target="_blank" href="Antras./Antra Pamoka.html"> Antras darbas</h1></a>
-	<h1><a target="_blank" href=""> trecias darbas</h1></a>
+	<h1><a target="_blank" href=""> Trečias darbas</h1></a>
 </body>
 </html>
